--- a/Supervised-Machine-Learning-Challenge/Credit Risk Evaluator.ipynb
+++ b/Supervised-Machine-Learning-Challenge/Credit Risk Evaluator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "[77536 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,15 +301,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Score: 0.9920553033429633\n",
-      "Testing Score: 0.9918489475856377\n"
+      "Training Data Score: 0.9919521254643004\n",
+      "Testing Data Score: 0.9921584812216261\n"
      ]
     }
    ],
@@ -318,24 +318,35 @@
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "model = LogisticRegression()\n",
-    "model_fit = model_fit.fit(x_train, y_train)\n",
-    "training_score = model_fit.score(x_train, y_train)\n",
-    "testing_score = model_fit.score(x_test, y_test)\n",
-    "\n",
-    "print(f\"Training Score: {training_score}\")\n",
-    "print(f\"Testing Score: {testing_score}\")"
+    "classifier = LogisticRegression()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "print(f\"Training Data Score: {classifier.score(x_train, y_train)}\")\n",
+    "print(f\"Testing Data Score: {classifier.score(x_test, y_test)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.9974893382858715\n",
+      "Testing Score: 0.9913330581923235\n"
+     ]
+    }
+   ],
    "source": [
     "# Train a Random Forest Classifier model and print the model score\n",
     "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(x_train, y_train)\n",
+    "print(f'Training Score: {clf.score(x_train, y_train)}')\n",
+    "print(f'Testing Score: {clf.score(x_test, y_test)}')"
    ]
   },
   {
@@ -343,6 +354,16 @@
    "metadata": {},
    "source": [
     "*Which model performed better? How does that compare to your prediction? Replace the text in this markdown cell with your answers to these questions.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "The linear regression model preformed better, which I predicted. The scores are \n",
+    "pretty close, so both models would be good. "
    ]
   }
  ],
